--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -1,12 +1,4 @@
 services:
-  # editor:
-  #   image: ubuntu:latest
-  #   entrypoint: "tail -f /dev/null"
-  #   restart: always
-  #   volumes:
-  #     - certbot:/var/www/certbot
-  #     - letsencrypt:/etc/letsencrypt
-    
   backup:
     image: alpine:3.17.2
     container_name: switchboard_backup
@@ -39,14 +31,32 @@ services:
         aliases:
           - nginx
 
+  # Get initial certificates
+  # letsencrypt:
+  #     image: certbot/certbot:v2.4.0
+  #     container_name: switchboard_letsencrypt
+  #     entrypoint: ""
+  #     command: >
+  #       sh -c "certbot certonly --reinstall -n -v -d notclickable.social -d www.notclickable.social --cert-name notclickable.social  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
+  #       certbot certonly --reinstall -v -n -d notclickable.com -d www.notclickable.com --cert-name notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
+  #       certbot certonly --reinstall -v -n -d vaultwarden.notclickable.com --cert-name vaultwarden.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+  #     depends_on:
+  #         - nginx
+  #     volumes:
+  #         - letsencrypt:/etc/letsencrypt
+  #         - certbot:/var/www/certbot
+  #     environment:
+  #         - TERM=xterm
+
+  # Renew certificates
   letsencrypt:
       image: certbot/certbot:v2.4.0
       container_name: switchboard_letsencrypt
       entrypoint: ""
       command: >
-        sh -c "certbot certonly --reinstall -n -v -d notclickable.social -d www.notclickable.social --cert-name notclickable.social  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
-        certbot certonly --reinstall -v -n -d notclickable.com -d www.notclickable.com --cert-name notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
-        certbot certonly --reinstall -v -n -d vaultwarden.notclickable.com --cert-name vaultwarden.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+        sh -c "certbot renew --keep-until-expiring -n -v -d notclickable.social -d www.notclickable.social --cert-name notclickable.social  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
+        certbot renew --keep-until-expiring -v -n -d notclickable.com -d www.notclickable.com --cert-name notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
+        certbot renew --keep-until-expiring -v -n -d vaultwarden.notclickable.com --cert-name vaultwarden.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
       depends_on:
           - nginx
       volumes:
