--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -54,9 +54,7 @@ services:
       container_name: switchboard_letsencrypt
       entrypoint: ""
       command: >
-        sh -c "certbot renew --keep-until-expiring -n -v -d notclickable.social -d www.notclickable.social --cert-name notclickable.social  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
-        certbot renew --keep-until-expiring -v -n -d notclickable.com -d www.notclickable.com --cert-name notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
-        certbot renew --keep-until-expiring -v -n -d vaultwarden.notclickable.com --cert-name vaultwarden.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+        sh -c "certbot renew --keep-until-expiring -n -v"
       depends_on:
           - nginx
       volumes:
