--- a/nginx/sites/authelia.conf
+++ b/nginx/sites/authelia.conf
@@ -1,47 +1,48 @@
 server {
     listen 80;
-    server_name auth.notclickable.com;
+    server_name auth.starbase80.dev;
 
-  access_log /var/log/nginx/auth.notclickable.com.access.logs;
-  error_log /var/log/nginx/auth.notclickable.com.error.logs;
-
-    location ^~ /.well-known/acme-challenge/ {
-        allow all;
-        root /var/www/certbot;
-    }
-
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl http2;
-    server_name auth.*;
-
-  access_log /var/log/nginx/auth.notclickable.com.access.logs;
-  error_log /var/log/nginx/auth.notclickable.com.error.logs;
-
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_tickets off;
-
-  ssl_certificate /etc/letsencrypt/live/auth.notclickable.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/auth.notclickable.com/privkey.pem;
-
-    set $upstream http://10.10.10.70:9091;
+    access_log /var/log/nginx/auth.starbase80.dev.access.logs;
+    error_log /var/log/nginx/auth.starbase80.dev.error.logs;
 
     location ^~ /.well-known/acme-challenge/ {
         allow all;
         root /var/www/certbot;
     }
 
-    location / {
-        include /etc/nginx/snippets/proxy.conf;
-        proxy_pass $upstream;
-    }
-
-    location /api/verify {
-        proxy_pass $upstream;
-    }
+    proxy_pass http://10.10.10.70:9091;
+    # return 301 https://$host$request_uri;
 }
+
+# server {
+#     listen 443 ssl http2;
+#     server_name auth.*;
+
+#     access_log /var/log/nginx/auth.starbase80.dev.access.logs;
+#     error_log /var/log/nginx/auth.starbase80.dev.error.logs;
+
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+#     ssl_prefer_server_ciphers on;
+#     ssl_session_cache shared:SSL:10m;
+#     ssl_session_tickets off;
+
+#     ssl_certificate /etc/letsencrypt/live/auth.starbase80.dev/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/auth.starbase80.dev/privkey.pem;
+
+#     set $upstream http://10.10.10.70:9091;
+
+#     location ^~ /.well-known/acme-challenge/ {
+#         allow all;
+#         root /var/www/certbot;
+#     }
+
+#     location / {
+#         include /etc/nginx/snippets/proxy.conf;
+#         proxy_pass $upstream;
+#     }
+
+#     location /api/verify {
+#         proxy_pass $upstream;
+#     }
+# }
