--- a/nginx/sites/homepage.conf
+++ b/nginx/sites/homepage.conf
@@ -4,10 +4,10 @@ upstream homepage_backend {
 
 server {
   listen 80;
-  server_name notclickable.com www.notclickable.com;
+  server_name starbase80.dev www.starbase80.dev;
 
-  access_log /var/log/nginx/notclickable.com.access.logs;
-  error_log /var/log/nginx/notclickable.com.error.logs;
+  access_log /var/log/nginx/starbase80.dev.access.logs;
+  error_log /var/log/nginx/starbase80.dev.error.logs;
 
   location ^~ /.well-known/acme-challenge/ {
     allow all;
@@ -21,66 +21,37 @@ server {
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
 
-    return 301 https://$host$request_uri;
-  }
-}
-
-server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-  server_name notclickable.com;
-
-  access_log /var/log/nginx/notclickable.com.access.logs;
-  error_log /var/log/nginx/notclickable.com.error.logs;
-
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_tickets off;
-
-  ssl_certificate /etc/letsencrypt/live/notclickable.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/notclickable.com/privkey.pem;
-
-  location ^~ /.well-known/acme-challenge/ {
-    allow all;
-    root /var/www/certbot;
-  }
-
-  location / {
     proxy_pass http://homepage_backend;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
+    # return 301 https://$host$request_uri;
   }
 }
 
-server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-  server_name www.notclickable.com;
+# server {
+#   listen 443 ssl http2;
+#   listen [::]:443 ssl http2;
+#   server_name starbase80.dev www.starbase80.dev;
 
-  access_log /var/log/nginx/notclickable.com.access.logs;
-  error_log /var/log/nginx/notclickable.com.error.logs;
+#   access_log /var/log/nginx/starbase80.dev.access.logs;
+#   error_log /var/log/nginx/starbase80.dev.error.logs;
 
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_tickets off;
+#   ssl_protocols TLSv1.2 TLSv1.3;
+#   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+#   ssl_prefer_server_ciphers on;
+#   ssl_session_cache shared:SSL:10m;
+#   ssl_session_tickets off;
 
-  ssl_certificate /etc/letsencrypt/live/notclickable.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/notclickable.com/privkey.pem;
+#   ssl_certificate /etc/letsencrypt/live/starbase80.dev/fullchain.pem;
+#   ssl_certificate_key /etc/letsencrypt/live/starbase80.dev/privkey.pem;
 
-  location ^~ /.well-known/acme-challenge/ {
-    allow all;
-    root /var/www/certbot;
-  }
+#   location ^~ /.well-known/acme-challenge/ {
+#     allow all;
+#     root /var/www/certbot;
+#   }
 
-  location / {
-    proxy_pass http://homepage_backend;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
-  }
-}
+#   location / {
+#     proxy_pass http://homepage_backend;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header Host $host;
+#     proxy_redirect off;
+#   }
+# }
